...
                .padding(.vertical)
                .navigationTitle("")
            }
            
            .navigationBarItems(trailing:NavigationLink(destination:FavoritesView())
                                {
                Image(systemName: "heart")
                    .foregroundColor(.white)
                    .bold()
                    .font(.title2)
            }.accessibilityIdentifier("heart")
            )
            .background(.orange)
...

    }
}
// Preview
struct ContentView_Previews: PreviewProvider {
    static var previews: some View {
//        SingleItemView(grocery: GroceryItem(id: "1", name: "Apple", category: "Fruit", price: 0, description: "juicy", protein: 0, calories: 0, fat: 0, sugar: 0, percentage: 0, weight: 0, imageURL: "https://i.pinimg.com/564x/f3/3a/51/f33a51d4fbd3f0dd77e9d6c91275889d.jpg", quantity: 2))
        ContentView()
    }
}

