...
                        Text(isFavorite ? "Remove From Favorites" : "Add To Favorites")
                            .foregroundColor(.white)
                            .bold()
                            .font(.title2)
                            .padding()
                            .background(isFavorite ? Color.purple.cornerRadius(25).shadow(color: .black, radius: 5) : Color.orange.cornerRadius(25).shadow(color: .black, radius: 10))
                    }.accessibilityIdentifier("addToFavoritesButton")

                    Spacer()

                }
            }
            .edgesIgnoringSafeArea(.top)
...
